chore: fix test warnings and improve coverage
This PR fixes Pytest ResourceWarnings and DeprecationWarnings, and improves test coverage for HistoryManager.

Changes:
- Added `close()` method to `HistoryManager` and used it in tests to fix `ResourceWarning`.
- Suppressed `httplib2` deprecation warnings in `pyproject.toml`.
- Added tests for `HistoryManager` schema migration and deletion methods.
- Removed dead code in `HistoryManager`.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,6 +35,11 @@ dev = [
 addopts = "--cov=src --cov-report=term-missing"
 testpaths = ["tests"]
 pythonpath = ["."]
+filterwarnings = [
+    "ignore::DeprecationWarning:httplib2.*",
+    "ignore::DeprecationWarning:pkg_resources.*",
+    "ignore::ResourceWarning:httplib2.*",
+]
 
 [tool.ruff]
 line-length = 88
