feat: 高優先度4機能を実装 (playlist list, history export/import, sync --fix, Quota自動制御)
- playlist list: プレイリスト一覧表示・プレイリスト内動画一覧表示
- history export: JSON/CSV形式のエクスポート
- history import: JSON/CSVファイルからのインポート（hash重複スキップ）
- sync --fix: ローカルにだけある履歴（リモート削除済み）を削除
- Quota自動制御: アップロード前にQuota残量をチェック、不足時は中断
- settings.yaml に daily_quota_limit を追加
- テスト14件追加（全105テスト合格）

--- a/settings.yaml
+++ b/settings.yaml
@@ -13,6 +13,7 @@ upload:
   chunk_size: 4194304
   retry_count: 5
   privacy_status: "private"  # private, public, unlisted
+  daily_quota_limit: 10000   # YouTube API daily quota limit (units)
 
 
 # Database path
